[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Simen Ellingsen Rustad <simen.rustad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
